// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameCell renders with a name 1`] = `
<Providers
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <MemoryRouter>
    <NameCell
      id="example-item"
      name="The Example Item"
      to="/example/item"
    />
  </MemoryRouter>
</Providers>
`;

exports[`NameCell renders with id as name 1`] = `
<Providers
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <MemoryRouter>
    <NameCell
      id="example-item"
      to="/example/item"
    />
  </MemoryRouter>
</Providers>
`;
